# La-Ruleta-de-la-Pobla-ZK-Russian-Roulette

./: .env.production  .gitattributes  .gitignore  .vercelignore  Cargo.toml  GAME_GUIDE.md  Resources.tsx  VIDEO_SCRIPT.md  ZK_MAFIA_README.md  vercel-build.sh  vercel.json
circuits/la_pobla_oculta/: Nargo.toml  Prover.toml
circuits/la_pobla_oculta/src/: main.nr
contracts/mock-game-hub/src/: lib.rs
contracts/zk-mafia/: Cargo.toml  README.md
contracts/zk-mafia/src/: lib.rs  test.rs
docs/: index.html
docs/assets/: index-COfycLAF.js
frontend/src/games/dice-duel/: bindings.ts
frontend/src/games/number-guess/: bindings.ts
frontend/src/games/twenty-one/: bindings.ts
sgs_frontend/: tsconfig.tsbuildinfo
sgs_frontend/public/: 404.html
sgs_frontend/src/: App.tsx
sgs_frontend/src/utils/: location.ts
zk-mafia-frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  vite.config.ts
zk-mafia-frontend/src/: App.tsx  config.ts  index.css
zk-mafia-frontend/src/components/: Layout.css  Layout.tsx  LayoutStandalone.css  LayoutStandalone.tsx  WalletStandalone.css  WalletStandalone.tsx  WalletSwitcher.css  WalletSwitcher.tsx
zk-mafia-frontend/src/hooks/: useWallet.ts  useWalletStandalone.ts
zk-mafia-frontend/src/services/: devWalletService.ts
zk-mafia-frontend/src/store/: walletSlice.ts
zk-mafia-frontend/src/types/: signer.ts
zk-mafia-frontend/src/utils/: authEntryUtils.ts  constants.ts  ledgerUtils.ts  requestCache.ts  runtimeConfig.ts  simulationUtils.ts  transactionHelper.ts
(+8 files in other folders)
